# cube-dl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.py  config_decorators.py  entities.py  lab.py  main.py  pyproject.toml  requirements.txt  root_config.py
.github/workflows/: actions_template_sync.yml  packaging_wheel_on_push.yml  publishing_on_tag.yml
c3lyr/: __init__.py  dao.py  dao_json_impl.py  entities.py  entity_fs_io.py
config_sys/: __init__.py  config_decorators.py  root_config.py  shared_config.py  utils.py
configs/: exp_on_oracle_mnist.py
configs/components/data_wrappers/: oracle_mnist.py
configs/components/models/: example_cnn_oracle_mnist.py
configs/components/task_wrappers/: basic_task_wrapper.py
configs/components/trainers/: basic_trainer.py
cube/: dist_utils.py  git_trace.py  main.py  types.py  utils.py
cube/c3lyr/: __init__.py  dao.py  dao_json_impl.py  entities.py  entity_fs_io.py  run_context.py
cube/callbacks/: __init__.py  callback.py
cube/config_sys/: __init__.py  config_decorators.py  root_config.py  shared_config.py  utils.py
cube/core/: __init__.py  components.py  context.py
cube_dl/: __init__.py  main.py  utils.py
cube_dl/c3lyr/: __init__.py  dao.py  entities.py
cube_dl/cli/: __init__.py  subcmd_add_exp.py  subcmd_ls.py  subcmd_new.py  subcmd_rm.py  subcmd_start.py  subcmd_version.py  subcmds_exec.py  utils.py
cube_dl/config_sys/: config_decorators.py  root_config.py  shared_config.py
cube_dl/core/: __init__.py
data/: Oracle-MNIST  Oracle-MNIST-Extracted
datasets/: oracle_mnist.py
docs/: README_zh-CN.md  figures.monopic
models/: example_cnn.py
outputs/: .gitkeep
starters/: starter-registry.json
starters/pytorch-lightning/: .gitignore  README.md  pyproject.toml  requirements.txt
starters/pytorch-lightning/callbacks/: metrics_csv.py
starters/pytorch-lightning/configs/: example.py  mnist_cnn_sl.py
starters/pytorch-lightning/configs/components/: mnist_data_module.py
starters/pytorch-lightning/data/: .gitkeep  MNIST
starters/pytorch-lightning/datasets/: basic_data_module.py
starters/pytorch-lightning/models/: cnn_example.py
starters/pytorch-lightning/outputs/: .gitignore
starters/pytorch-lightning/outputs/proj_6r_DummyProj/: proj_6r_DummyProj.json
starters/pytorch-lightning/outputs/proj_wr_DummyProj/: .gitignore  proj_wr_DummyProj.json
starters/pytorch-lightning/tasks/: base.py  supervised_learning.py
starters/pytorch-lightning/utils/: logger.py
utils/: temp.py
wrappers/: __init__.py  basic_data_wrapper.py  basic_task_wrapper.py  utils.py  wrapper_base.py
