[tool.poetry]
name = "cube"
version = "0.1.1"
description = ""
authors = ["Alive1024 <2431945058@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.5.2"
jsonpath-ng = "^1.5.3"
opencv-python = "^4.8.0.76"
torch = ">=2.0.0"
pytorch-lightning = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.poetry.scripts]
cube = "cube.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
