[tool.poetry]
name = "cube"
version = "0.2.5"
description = ""
authors = ["Alive1024 <2431945058@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.5.2"
jsonpath-ng = "^1.5.3"
opencv-python = "^4.8.0.76"
torch = ">=2.0.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.1.8"
black = "^23.12.0"

[tool.poetry.scripts]
cube = "cube.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 120

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
target-version = "py310"
line-length = 120
show-fixes = true
ignore-init-module-imports = true

# https://beta.ruff.rs/docs/rules/
extend-select = [
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "I",    # isort
#    "D",    # pydocstyle
    "NPY",  # NumPy-specific rules
    "C90",  # mccabe
]
