[tool.poetry]
name = "cube-dl"
version = "0.3.6"
description = '"The last stop" for training your deep learning models. Manage tons of configurations and experiments with minimal changes to existing code.'
keywords = ["python", "data-science", "machine-learning", "deep-learning", "python3", "pytorch", "pytorch-lightning"]
authors = ["Alive1024 <2431945058@qq.com>"]
readme = "README.md"
license = ""
classifiers = ["Development Status :: 3 - Alpha",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3 :: Only",
               "Operating System :: Unix",
               "Operating System :: MacOS",
            ]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.5.2"
jsonpath-ng = "^1.5.3"
tomli = "^2.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.1.8"
black = "^23.12.0"

[tool.poetry.scripts]
cube = "cube_dl.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 120

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
target-version = "py310"
line-length = 120
show-fixes = true
ignore-init-module-imports = true

# https://beta.ruff.rs/docs/rules/
extend-select = [
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "I",    # isort
#    "D",    # pydocstyle
    "NPY",  # NumPy-specific rules
    "C90",  # mccabe
]
